third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/root_namespace.stderr
error: expected expression, found `]`
 --> tests/ui/root_namespace.rs:9:19
  |
9 |     #[namespace = ]
  |                   ^ expected expression
